<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_container"
    tools:context="com.example.suraj.testapplication1.MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation= "horizontal"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/checking"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="this sis a jbusllshit day and ntohng sdelaj"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/item_first"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/item_second"
                app:layout_constraintLeft_toRightOf="@id/item1"
                app:layout_constraintTop_toBottomOf="@id/item1" />

            <TextView
                android:id="@+id/item3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/item_third"
                app:layout_constraintLeft_toRightOf="@id/item2"
                app:layout_constraintTop_toBottomOf="@id/item2" />

            <TextView
                android:id="@+id/item4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/item_fourth"
                app:layout_constraintLeft_toRightOf="@id/item3"
                app:layout_constraintTop_toBottomOf="@id/item3" />

            <TextView
                android:id="@+id/item5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/item_fifth"
                app:layout_constraintLeft_toRightOf="@id/item4"
                app:layout_constraintTop_toBottomOf="@id/item4" />

            <View
                android:layout_width="100dp"
                android:layout_height="100dp" />

        </LinearLayout>

    </HorizontalScrollView>


    <android.support.v4.view.ViewPager
        android:id="@+id/vpPager"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <android.support.v4.view.PagerTabStrip
            android:id="@+id/pager_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingBottom="4dp"
            android:paddingTop="4dp" />

    </android.support.v4.view.ViewPager>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/textview_first"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_second"
            app:layout_constraintBottom_toTopOf="@id/textview3"
            app:layout_constraintLeft_toRightOf="@id/textview1"
            app:layout_constraintRight_toLeftOf="@id/textview3"
            app:layout_constraintTop_toBottomOf="@id/textview1" />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/textview_third"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectedItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_item_from_top" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/red_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f00"
            android:text="@string/red_button" />

        <Button
            android:id="@+id/blue_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00f"
            android:text="@string/blue_button" />

        <Button
            android:id="@+id/green_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0f0"
            android:text="@string/green_button" />

    </LinearLayout>

</LinearLayout>
